Fix Class.newInstance() method is deprecated in Java 9